styles/index.css
body {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;
  padding: 0.05rem 1rem;
  background-color: #1B1B1B;
  color: whitesmoke;
}

img {
  max-width: 100%;
  display: block;
}

.header {
  display: flex;
  background-color: #1B1B1B;
  padding: 0;
  justify-content: center;
  align-items: center;
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://lh3.googleusercontent.com/pw/AM-JKLXZA-EuNoD4nhZ3A0Efj9Or5jUutSkdghl6otRHwt41noUPNONecUqQ9UIqURevfdit2Mo9VFND08TrG4706j-jVumu8bfYRZNWHjDreTJTUDzTbP6FAURIdKpaWVIm8QgSGEUHe9o92IOXANDC9_4G=w1143-h643-no?authuser=0");
  background-repeat: no-repeat;
  height: 90vh;
  background-size: cover;
  color: whitesmoke;
}

h1 {
  text-align: center;
  padding: 1em;
  font-size: 2.5rem;
}

p {
  font-size: 1.1rem;
}

/* center unordered list */
ul {
  display: table;
  margin: 0 auto;
}

li {
  font-size: 1.1rem;
}

#navbar {
  overflow: hidden;
  background: #1B1B1B;
}

#navbar a {
  background: #1B1B1B;
  float: left;
  display: block;
  text-align: center;
  text-decoration: none;
  padding: 1em 1.2em;
  color: #ff2626;
}

#navbar a:hover {
  background: #ff2626;
  color: white;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.sticky+.content {
  padding-top: 1rem;
}

/* size boxes */
* {
  box-sizing: border-box;
}

.row {
  display: flex;
  flex-wrap: wrap;
  max-width: 100%;
  margin: 1em;
}

.side {
  flex: 30%;
  padding: 3.5%;
}

.main {
  flex: 60%;
  padding: 3.5%;
}

.subtitle {
  flex: 100%;
}

#projects a {
  color: #1A72E8;
  text-decoration: none;
}
/* stack side by side content on top of each other when screen width is less than 480px */
@media screen and (max-width: 480px) {
  .row {
    flex-direction: column;
  }
}

/* stack navbar links on top of each other when screen width is less than 400px */
@media screen and (max-width: 400px) {
  .navbar a {
    float: none;
    width: 100%;
  }
}

.email {
  font-size: 2em;
  background-color: #ff2626;
  border-radius: 0.4em;
  margin: 1em;
  padding: 1em;
  color: white;
  text-decoration: none;
  font-weight: bold;
}

.card {
  background-color: limegreen;
  color: white;
  padding: 1rem;
  font-size: 1.1rem;
}

.cards {
  max-width: 1200px;
  margin: 0 auto;
  display: grid;
  grid-gap: 1rem;
}

@media (min-width: 600px) {
  .cards {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 900px) {
  .cards {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* call to action button */
.CTA {
  display: block;
  font-size: 2.5em;
  background-color: #ff2626;
  border-radius: 0.4em;
  margin: 10vh;
  /* margin-bottom: 4em; */
  padding: 1em;
  color: white;
  text-decoration: none;
  font-weight: bold;
  text-align: center;
}

